Fixed a layout bug in timeline. #27

--- a/src/app/data-management/data-management.component.css
+++ b/src/app/data-management/data-management.component.css
@@ -2,4 +2,9 @@
   min-height: 100vh;
   min-width: 100vw;
   padding-top: 100px;
+  height: 100%;
+}
+
+.container {
+  margin-bottom: 50px;
 }
