--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -21,7 +21,8 @@
 }
 
 #bodySection {
-  height: calc(100vh - 500px);
+  min-height: calc(100vh - 500px);
+  height: 100%;
   padding-top: 70px;
 }
 
@@ -45,6 +46,8 @@
 
 #createNewSection {
   display: none;
-  height: 100vh;
-  width: 100vw;
+  min-height: 100vh;
+  min-width: 100vw;
+  width: 100%;
+  height: 100%;
 }
