--- a/src/app/staff-management/staff-management.component.css
+++ b/src/app/staff-management/staff-management.component.css
@@ -2,6 +2,8 @@
   min-height: 100vh;
   min-width: 100vw;
   padding-top: 100px;
+  height: 100%;
+  width: 100%;
 }
 
 .container {
